--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -447,7 +447,7 @@
       <!-- END Groovy-Eclipse -->
 
       <!-- BEGIN STS4 Language Server -->
-      <connectorDescriptor
+<!--      <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="STS4 Language Server - Cloud Foundry Manifest Editing Support"
             id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"
@@ -485,7 +485,7 @@
          <overview
                summary="Advanved support for editing Cloud Foundry manifest files">
          </overview>
-      </connectorDescriptor>
+      </connectorDescriptor> -->
 
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
@@ -565,27 +565,33 @@
          </overview>
       </connectorDescriptor>
 
-      <!-- BEGIN Buildship -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Buildship 2: Gradle Support for Eclipse"
-            id="org.eclipse.buildship"
+            description="Spring Tools 4 Add-On Extension Pack"
+            id="org.springframework.tooling.boot.ls.feature"
             kind="task"
             groupId="certified"
             license="Free, EPL"
-            name="Buildship 2"
-            provider="Eclipse Foundation"
-            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="https://download.eclipse.org/releases/photon/">
-         <iu id="org.eclipse.buildship" />
+            name="Spring Tools 4 Add-On Extension Pack"
+            provider="Pivotal Inc."
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.9)(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.12/">
+         <iu id="org.springframework.tooling.boot.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.integration.feature"/>
+         <iu id="org.springframework.tooling.bosh.ls.feature"/>
+         <iu id="org.springframework.tooling.concourse.ls.feature"/>
          <icon
-               image32="images/buildship.png">
+               image32="images/sts4-32.png">
          </icon>
          <overview
-               summary="Buildship: Gradle Support for Eclipse">
+               summary="The Spring Tools 4 Add-On Extension Pack allows you to install the latest version of the Spring Tools 4 features as
+			   an add-on into an existing STS 3.9.x installation. Please keep in mind that this add-on is not meant for production use. We recommend to migrate
+			   to the full Spring Tools4 for Eclipse distribution instead as soon as possible.">
          </overview>
       </connectorDescriptor>
-	  
+
+      <!-- BEGIN Buildship -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Buildship 2: Gradle Support for Eclipse"
@@ -633,7 +639,7 @@
             kind="task"
             groupId="certified"
             license="Free, EPL"
-            name="Buildship 2"
+            name="Buildship 3"
             provider="Eclipse Foundation"
             platformFilter="(&amp;(platform.version&gt;=4.11.0)(platform.version&lt;=4.11.9))"
 			siteUrl="https://download.eclipse.org/releases/2019-03/">
@@ -645,102 +651,29 @@
                summary="Buildship: Gradle Support for Eclipse">
          </overview>
       </connectorDescriptor>
+	  
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Buildship 3: Gradle Support for Eclipse"
+            id="org.eclipse.buildship"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Buildship 3"
+            provider="Eclipse Foundation"
+            platformFilter="(&amp;(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+			siteUrl="https://download.eclipse.org/releases/2019-06/">
+         <iu id="org.eclipse.buildship" />
+         <icon
+               image32="images/buildship.png">
+         </icon>
+         <overview
+               summary="Buildship: Gradle Support for Eclipse">
+         </overview>
+      </connectorDescriptor>
       <!-- END Buildship -->
 	  
       <!-- BEGIN Spring-IDE -->
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Full-featured support for working with Spring projects"
-            id="org.springframework.ide.eclipse.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring IDE"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.6">
-         <iu id="org.springframework.ide.eclipse.feature" />
-         <iu id="org.springframework.ide.eclipse.aop.feature" />
-         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.security.feature" />
-         <iu id="org.springframework.ide.eclipse.webflow.feature" />
-         <iu id="org.springframework.ide.eclipse.batch.feature" />
-         <iu id="org.springframework.ide.eclipse.integration.feature" />
-         <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
-         <iu id="org.springframework.ide.eclipse.maven.feature" />
-         <iu id="org.springframework.ide.eclipse.data.feature" />
-         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="Full-featured support for working with Spring projects.">
-         </overview>
-      </connectorDescriptor>
-	  
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Full-featured support for working with Spring projects"
-            id="org.springframework.ide.eclipse.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring IDE"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.7">
-         <iu id="org.springframework.ide.eclipse.feature" />
-         <iu id="org.springframework.ide.eclipse.aop.feature" />
-         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.security.feature" />
-         <iu id="org.springframework.ide.eclipse.webflow.feature" />
-         <iu id="org.springframework.ide.eclipse.batch.feature" />
-         <iu id="org.springframework.ide.eclipse.integration.feature" />
-         <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
-         <iu id="org.springframework.ide.eclipse.maven.feature" />
-         <iu id="org.springframework.ide.eclipse.data.feature" />
-         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="Full-featured support for working with Spring projects.">
-         </overview>
-      </connectorDescriptor>
-	  
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Full-featured support for working with Spring projects"
-            id="org.springframework.ide.eclipse.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring IDE"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.8">
-         <iu id="org.springframework.ide.eclipse.feature" />
-         <iu id="org.springframework.ide.eclipse.aop.feature" />
-         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.security.feature" />
-         <iu id="org.springframework.ide.eclipse.webflow.feature" />
-         <iu id="org.springframework.ide.eclipse.batch.feature" />
-         <iu id="org.springframework.ide.eclipse.integration.feature" />
-         <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
-         <iu id="org.springframework.ide.eclipse.maven.feature" />
-         <iu id="org.springframework.ide.eclipse.data.feature" />
-         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="Full-featured support for working with Spring projects.">
-         </overview>
-      </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Full-featured support for working with Spring projects"
@@ -764,6 +697,7 @@
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
          <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <iu id="org.springframework.ide.eclipse.xml.namespaces.feature" />
          <icon
                image32="images/spring.png">
          </icon>
@@ -795,6 +729,7 @@
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
          <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <iu id="org.springframework.ide.eclipse.xml.namespaces.feature" />
          <icon
                image32="images/spring.png">
          </icon>
@@ -826,6 +761,39 @@
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
          <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <iu id="org.springframework.ide.eclipse.xml.namespaces.feature" />
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="Full-featured support for working with Spring projects.">
+         </overview>
+      </connectorDescriptor>
+	  
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Full-featured support for working with Spring projects"
+            id="org.springframework.ide.eclipse.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE"
+            provider="Pivotal Software, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.12">
+         <iu id="org.springframework.ide.eclipse.feature" />
+         <iu id="org.springframework.ide.eclipse.aop.feature" />
+         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
+         <iu id="org.springframework.ide.eclipse.security.feature" />
+         <iu id="org.springframework.ide.eclipse.webflow.feature" />
+         <iu id="org.springframework.ide.eclipse.batch.feature" />
+         <iu id="org.springframework.ide.eclipse.integration.feature" />
+         <iu id="org.springframework.ide.eclipse.autowire.feature" />
+         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
+         <iu id="org.springframework.ide.eclipse.maven.feature" />
+         <iu id="org.springframework.ide.eclipse.data.feature" />
+         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <iu id="org.springframework.ide.eclipse.xml.namespaces.feature" />
          <icon
                image32="images/spring.png">
          </icon>
@@ -942,6 +910,25 @@
             provider="Pivotal Software, Inc., Disid"
             platformFilter="(&amp;(platform.version&gt;=4.11.0)(platform.version&lt;=4.11.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.11">
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+	  
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="Pivotal Software, Inc., Disid"
+            platformFilter="(&amp;(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.12">
          <icon
                image32="images/spring.png">
          </icon>
@@ -1165,66 +1152,6 @@
             license="Free, EPL"
             name="Pivotal tc Server Integration for Eclipse"
             provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.6.0)(platform.version&lt;=4.6.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.6">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.7.0)(platform.version&lt;=4.7.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.7">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.8.0)(platform.version&lt;=4.8.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.8">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.9.0)(platform.version&lt;=4.9.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.9">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
@@ -1267,6 +1194,26 @@
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.11.0)(platform.version&lt;=4.11.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.11">
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="%tcserver.description"
+               url="https://pivotal.io/products">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.runtimes"
+            description="Pivotal tc Server Integration for Eclipse"
+            id="com.vmware.vfabric.ide.eclipse.tcserver"
+            kind="task"
+            license="Free, EPL"
+            name="Pivotal tc Server Integration for Eclipse"
+            provider="Pivotal Software, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.12">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <icon
                image32="images/spring.png">
