--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -571,7 +571,7 @@
             license="Free, EPL"
             name="Spring Tools 4 Add-On Extension Pack"
             provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.10)(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.11)(platform.version&gt;=4.12.0)(platform.version&lt;=4.12.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.12/">
          <iu id="org.springframework.tooling.boot.ls.feature"/>
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
@@ -596,8 +596,33 @@
             license="Free, EPL"
             name="Spring Tools 4 Add-On Extension Pack"
             provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.10)(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.11)(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.13/">
+         <iu id="org.springframework.tooling.boot.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
+         <iu id="org.springframework.tooling.bosh.ls.feature"/>
+         <iu id="org.springframework.tooling.concourse.ls.feature"/>
+         <icon
+               image32="images/sts4-32.png">
+         </icon>
+         <overview
+               summary="The Spring Tools 4 Add-On Extension Pack allows you to install the latest version of the Spring Tools 4 features as
+			   an add-on into an existing STS 3.9.x installation. Please keep in mind that this add-on is not meant for production use. We recommend to migrate
+			   to the full Spring Tools4 for Eclipse distribution instead as soon as possible.">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring Tools 4 Add-On Extension Pack"
+            id="org.springframework.tooling.boot.ls.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring Tools 4 Add-On Extension Pack"
+            provider="Pivotal Inc."
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.11)(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.14/">
          <iu id="org.springframework.tooling.boot.ls.feature"/>
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
          <iu id="org.springframework.tooling.bosh.ls.feature"/>
@@ -684,6 +709,26 @@
             provider="Eclipse Foundation"
             platformFilter="(&amp;(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
 			siteUrl="https://download.eclipse.org/releases/2019-09/">
+         <iu id="org.eclipse.buildship" />
+         <icon
+               image32="images/buildship.png">
+         </icon>
+         <overview
+               summary="Buildship: Gradle Support for Eclipse">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Buildship 3: Gradle Support for Eclipse"
+            id="org.eclipse.buildship"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Buildship 3"
+            provider="Eclipse Foundation"
+            platformFilter="(&amp;(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
+			siteUrl="https://download.eclipse.org/releases/2019-12/">
          <iu id="org.eclipse.buildship" />
          <icon
                image32="images/buildship.png">
@@ -834,6 +879,38 @@
             provider="Pivotal Software, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.13">
+         <iu id="org.springframework.ide.eclipse.feature" />
+         <iu id="org.springframework.ide.eclipse.aop.feature" />
+         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
+         <iu id="org.springframework.ide.eclipse.security.feature" />
+         <iu id="org.springframework.ide.eclipse.webflow.feature" />
+         <iu id="org.springframework.ide.eclipse.batch.feature" />
+         <iu id="org.springframework.ide.eclipse.integration.feature" />
+         <iu id="org.springframework.ide.eclipse.autowire.feature" />
+         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
+         <iu id="org.springframework.ide.eclipse.maven.feature" />
+         <iu id="org.springframework.ide.eclipse.data.feature" />
+         <iu id="org.springframework.ide.eclipse.boot.dash.feature" />
+         <iu id="org.springframework.ide.eclipse.xml.namespaces.feature" />
+         <icon
+               image32="images/spring.png">
+         </icon>
+         <overview
+               summary="Full-featured support for working with Spring projects.">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Full-featured support for working with Spring projects"
+            id="org.springframework.ide.eclipse.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE"
+            provider="Pivotal Software, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.14">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
