--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -56,32 +56,7 @@
             license="Free, EPL"
             name="Spring Tools 4 Add-On Extension Pack"
             provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.12)(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.13/">
-         <iu id="org.springframework.tooling.boot.ls.feature"/>
-         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
-         <iu id="org.springframework.tooling.bosh.ls.feature"/>
-         <iu id="org.springframework.tooling.concourse.ls.feature"/>
-         <icon
-               image32="images/sts4-32.png">
-         </icon>
-         <overview
-               summary="The Spring Tools 4 Add-On Extension Pack allows you to install the latest version of the Spring Tools 4 features as
-			   an add-on into an existing STS 3.9.x installation. Please keep in mind that this add-on is not meant for production use. We recommend to migrate
-			   to the full Spring Tools4 for Eclipse distribution instead as soon as possible.">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Spring Tools 4 Add-On Extension Pack"
-            id="org.springframework.tooling.boot.ls.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring Tools 4 Add-On Extension Pack"
-            provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.12)(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.13)(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.14/">
          <iu id="org.springframework.tooling.boot.ls.feature"/>
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
@@ -106,8 +81,33 @@
             license="Free, EPL"
             name="Spring Tools 4 Add-On Extension Pack"
             provider="Pivotal Inc."
-            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.12)(platform.version&gt;=4.15.0)(platform.version&lt;=4.15.9))"
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.13)(platform.version&gt;=4.15.0)(platform.version&lt;=4.15.9))"
 			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.15/">
+         <iu id="org.springframework.tooling.boot.ls.feature"/>
+         <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
+         <iu id="org.springframework.tooling.bosh.ls.feature"/>
+         <iu id="org.springframework.tooling.concourse.ls.feature"/>
+         <icon
+               image32="images/sts4-32.png">
+         </icon>
+         <overview
+               summary="The Spring Tools 4 Add-On Extension Pack allows you to install the latest version of the Spring Tools 4 features as
+			   an add-on into an existing STS 3.9.x installation. Please keep in mind that this add-on is not meant for production use. We recommend to migrate
+			   to the full Spring Tools4 for Eclipse distribution instead as soon as possible.">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring Tools 4 Add-On Extension Pack"
+            id="org.springframework.tooling.boot.ls.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring Tools 4 Add-On Extension Pack"
+            provider="Pivotal Inc."
+            platformFilter="(&amp;(com.springsource.sts.version&gt;=3.9.13)(platform.version&gt;=4.16.0)(platform.version&lt;=4.16.9))"
+			siteUrl="https://download.springsource.com/release/TOOLS/sts4/update/e4.16/">
          <iu id="org.springframework.tooling.boot.ls.feature"/>
          <iu id="org.springframework.tooling.cloudfoundry.manifest.ls.feature"/>
          <iu id="org.springframework.tooling.bosh.ls.feature"/>
@@ -182,107 +182,28 @@
                summary="Buildship: Gradle Support for Eclipse">
          </overview>
       </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Buildship 3: Gradle Support for Eclipse"
+            id="org.eclipse.buildship"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Buildship 3"
+            provider="Eclipse Foundation"
+            platformFilter="(&amp;(platform.version&gt;=4.16.0)(platform.version&lt;=4.16.9))"
+			siteUrl="https://download.eclipse.org/releases/2020-06/">
+         <iu id="org.eclipse.buildship" />
+         <icon
+               image32="images/buildship.png">
+         </icon>
+         <overview
+               summary="Buildship: Gradle Support for Eclipse">
+         </overview>
+      </connectorDescriptor>
       <!-- END Buildship -->
 	  
-      <!-- tc Server support -->
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Developer Edition enhances Apache Tomcat to provide Java developers insight into the performance and behavior of their Spring applications."
-            id="com.springsource.server.tc.bundle"
-            kind="task"
-            license="Commercial"
-            name="Pivotal tc Server Developer Edition"
-            provider="Pivotal Software, Inc."
-            siteUrl="https://download.springsource.com/release/TOOLS/extensions/sts380">
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.13.0)(platform.version&lt;=4.13.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.13">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.14.0)(platform.version&lt;=4.14.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.14">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="Pivotal tc Server Integration for Eclipse"
-            id="com.vmware.vfabric.ide.eclipse.tcserver"
-            kind="task"
-            license="Free, EPL"
-            name="Pivotal tc Server Integration for Eclipse"
-            provider="Pivotal Software, Inc."
-            platformFilter="(&amp;(platform.version&gt;=4.15.0)(platform.version&lt;=4.15.9))"
-			siteUrl="https://download.springsource.com/release/TOOLS/update/e4.15">
-         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
-         <icon
-               image32="images/spring.png">
-         </icon>
-         <overview
-               summary="%tcserver.description"
-               url="https://pivotal.io/products">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.runtimes"
-            description="The integration supports application deployment and scaling, service bindings, and migration between Cloud spaces. Java 7 is required to install and run the integration."
-            kind="task"
-            id="org.eclipse.cft.server"
-            license="Free, EPL"
-            name="Cloud Foundry Integration for Eclipse"
-            platformFilter="(com.springsource.sts.version&gt;=2.9.0)"
-            provider="Eclipse, Inc."
-            siteUrl="https://download.eclipse.org/cft/1.2.0/">
-         <iu id="org.eclipse.cft.server.core.feature" />
-         <iu id="org.eclipse.cft.server.ui.feature" />
-         <icon
-               image32="images/cloudfoundry_32.png">
-         </icon>
-         <overview
-               summary="%cloudfoundry.description"
-               url="https://www.cloudfoundry.org">
-         </overview>
-      </connectorDescriptor>
       
 	</extension>
 </plugin>
